--- a/Front/src/tpl/fraudFilter-edit-dialog.html
+++ b/Front/src/tpl/fraudFilter-edit-dialog.html
@@ -18,7 +18,14 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Campaign<span class="star-icon">*</span>:</label>
                 <div class="col-sm-7">
-                    <selectize config='campaignFilter.config' options='campaignFilter.options' ng-model="formData.campaigns" placeholder="Select some campaigns" required></selectize>
+                    <selectize
+                      config='campaignFilter.config'
+                      options='campaignFilter.options'
+                      ng-model="formData.campaigns"
+                      placeholder="Select some campaigns"
+                      required
+                      >
+                    </selectize>
                 </div>
             </div>
             <div class="form-group">
@@ -53,17 +60,21 @@
                     </md-select>
                     <md-select class="cs-subform-select" ng-model="condition.operand">
                         <md-option value=">">&gt;</md-option>
-                        <md-option value="<">&lt;</md-option>
+                        <md-option value="<" ng-disabled="true">&lt;</md-option>
                     </md-select>
-                    <input type="text" name="conValue" class="cs-subform-select form-control" ng-model="condition.value" required style="width: auto;">
+                    <input type="text" name="condition.key" class="cs-subform-select form-control" ng-model="condition.value" required style="width: auto;">
                     <span style="color:red" ng-show="editForm.conValue.$dirty && editForm.conValue.$invalid">
-                        <span ng-show="editForm.conValue.$error.required">Value is required.</span>
+                        <span ng-show="editForm[{{condition.key}}].$error.required">Value is required.</span>
                     </span>
-                    <i ng-click="deleteCondition(condition)" class="em-close" ng-if="$index > 0">x</i>
+                    <i ng-click="deleteCondition(condition)" ng-if="$index > 0" class="em-close material-icons">delete</i>
                 </div>
             </div>
             <div class="form-group" ng-if="conditionFilters.length > conditions.length">
-              <div class="col-sm-7 col-sm-offset-3"><em ng-click="addCondition()">+Add another</em></div>
+              <div class="col-sm-7 col-sm-offset-3">
+                <em ng-click="addCondition()">
+                  <i class="material-icons add-next">add_circle</i>Add another
+                </em>
+              </div>
             </div>
         </form>
     </md-dialog-content>
