--- a/Front/src/tpl/fraud-filter-log-dialog.html
+++ b/Front/src/tpl/fraud-filter-log-dialog.html
@@ -19,17 +19,15 @@
           <thead md-head>
             <tr md-row>
               <th md-column>Campaign</th>
-              <th md-column>Action</th>
-              <th md-column>Inventory Sources</th>
-              <th md-column>Inventory Apps/Sites</th>
+              <th md-column>Dimension</th>
+              <th md-column>Date</th>
             </tr>
           </thead>
           <tbody md-body>
             <tr md-row ng-repeat="logDetail in logDetails">
               <td md-cell>{{logDetail.campaign}}</td>
-              <td md-cell>{{logDetail.action}}</td>
-              <td md-cell>{{logDetail.inventorySources}}</td>
-              <td md-cell>{{logDetail.inventory}}</td>
+              <td md-cell>{{logDetail.dimension}}</td>
+              <td md-cell>{{logDetail.time}}</td>
             </tr>
           </tbody>
         </table>
