调整menu的样式

--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -138,18 +138,18 @@
                 </a>
             </li>
             <li>
-              <md-menu-bar>
+              <md-menu-bar style="padding: 0;">
                   <md-menu>
                     <button ng-click="$mdMenu.open()" class="type-title">
                       <i class="icon-cogs"></i>
                       Tool
                     </button>
-                    <md-menu-content>
+                    <md-menu-content width="3">
                       <md-menu-item>
-                        <md-button><a ui-sref="app.suddenChange" md-ink-ripple>SuddenChange</a></md-button>
+                        <md-button><a ui-sref="app.suddenChange" md-ink-ripple>Sudden Change</a></md-button>
                       </md-menu-item>
                       <md-menu-item>
-                        <md-button><a ui-sref="app.fraudFilter">FraudFilter</a></md-button>
+                        <md-button><a ui-sref="app.fraudFilter">Fraud Filter</a></md-button>
                       </md-menu-item>
                     </md-menu-content>
                   </md-menu>
