--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -21,23 +21,31 @@
 </head>
 
 <body>
-<div class="nav-w navbar-fixed-top">
-    <div class="nav-box">
-        <a href="http://www.newbidder.com"><img src="img/logo-3.png"></a>
-        <div id="menu3">
-            <ul class="nav-col">
-                <li><a href="#pricing">Pricing</a></li>
-                <li><a href="#feature">Feature</a></li>
-                <li><a href="#demo">Demo</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="http://panel.newbidder.com/#/access/signin">Sign in</a></li>
-                <li><a href="http://panel.newbidder.com/#/access/signup">Sign up</a></li>
-            </ul>
+<div class="free-active">
+    <div class="free-active-col">
+        <p>Newbidder will start <b>FREE</b> plan with</p>
+        <p class="free-small">unlimited events since 1 May, 2017</p>
+    </div>
+    <div class="time">Countdown <b id="timeText">5</b> Days</div>
+
+</div>
+<header id="header">
+    <div class="nav-w">
+        <div class="nav-box">
+            <a href="http://www.newbidder.com"><img src="img/logo-3.png"></a>
+            <div id="menu3">
+                <ul class="nav-col">
+                    <li><a href="#pricing">Pricing</a></li>
+                    <li><a href="#feature">Feature</a></li>
+                    <li><a href="#demo">Demo</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="http://panel.newbidder.com/#/access/signin">Sign in</a></li>
+                    <li><a href="http://panel.newbidder.com/#/access/signup">Sign up</a></li>
+                </ul>
+            </div>
         </div>
     </div>
-</div>
 
-<header id="header">
     <div class="main_nav">
         <div class="container">
             <div class="mobile-toggle"> <span></span> <span></span> <span></span> </div>
@@ -50,6 +58,7 @@
                     <li><a href="#contact2">Contact</a></li>
                     <li><a href="http://panel.newbidder.com/#/access/signin">Sign in</a></li>
                     <li><a href="http://panel.newbidder.com/#/access/signup">Sign up</a></li>
+                    <li class="free-trial-btn"><a href="http://panel.newbidder.com/#/access/signin">Try it Free</a></li>
                 </ul>
             </nav>
         </div>
@@ -64,7 +73,6 @@
         <div class="scroll-down"></div>
     </a>
 </header>
-
 <section id="pricing">
     <div class="container" id="pricing2">
         <div class="pricing-box">
@@ -77,12 +85,9 @@
                     </div>
                     <div class="pricing-line clearfix">
                         <ol class="free-list">
-                            <li><i class="icon-ok"></i>Unlimited events</li>
-                            <li><i class="icon-ok"></i>Skype support 24/7</li>
-                            <li><i class="icon-ok"></i>6 months data retention</li>
+                            <li><i class="icon-ok"></i>Skype Support 24/7  </li>
+                            <li><i class="icon-ok"></i>3 month data retention</li>
                             <li><i class="icon-ok"></i>1 custom tracking domain</li>
-                            <li><i class="icon-ok"></i>Bot filter (1 rule)</li>
-                            <li><i class="icon-ok"></i>Sudden change (1 rule)</li>
                         </ol>
                         <a href="http://panel.newbidder.com/#/access/signup">
                         <button class="free-btn">Select Plan<i class="icon-arrow-right"></i></button>
@@ -506,15 +511,18 @@
         $.src="https://v2.zopim.com/?4ccuvov3W5X4ai2mZUkHWPRhm1DeW4mz";z.t=+new Date;$.
                 type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 </script>
-<script type="text/javascript">
-    $(function() {
-        $("#3").lavaLamp({
-            fx: "backout",
-            speed: 700,
-            click: function(event, menuItem) {
-                return false;
-            }
-        });
-    });
+
+<script>
+    function getLeftDays() {
+        var date = new Date();
+        var month = date.getMonth() + 1;
+        var strDate = date.getDate();
+        if (month == 4) {
+            var leftDays = 30 - strDate + 1;
+            $(".time #timeText").text(leftDays);
+        } else {
+            $(".free-active").text("");
+        }
+    }
 </script>
 </html>
