--- a/www.newbidder.com/newbidder_free_teaser_en.html
+++ b/www.newbidder.com/newbidder_free_teaser_en.html
@@ -53,8 +53,8 @@
             </li>
             <li>
                 <h3><i class="icon-ok"></i>3rd Affiliate network API integrate (only 1)</h3>
-                <p>if you running offer from mobidea, and test multi offer daily. you don¡¯t need to create one by one in newbidder tracking again. we have integrate with 6 affiliate network through api that you can manage your offer in our platform and meanwhile you can  import the offer from our system,
-                    <br>you can check the detail£º
+                <p>if you running offer from mobidea, and test multi offer daily. you don't need to create one by one in newbidder tracking again. we have integrate with 6 affiliate network through api that you can manage your offer in our platform and meanwhile you can  import the offer from our system,
+                    <br>you can check the detail:
                     <a href="http://discourse.newbidder.com/t/feature-how-to-import-the-ofer-list-into-newbidder-tracking-one-time/39">http://discourse.newbidder.com/t/feature-how-to-import-the-ofer-list-into-newbidder-tracking-one-time/39</a>
                 </p>
             </li>
