fix href of mini_tutorial

--- a/www.newbidder.com/newbidder_free_teaser.html
+++ b/www.newbidder.com/newbidder_free_teaser.html
@@ -64,7 +64,7 @@
         </ul>
         <div class="free-teaser-xq">
             <ul>
-                <li>具体的使用文档可以参考： <a href="www.newbidder.com/mini-tutorial.html">www.newbidder.com/mini-tutorial.html</a>
+                <li>具体的使用文档可以参考： <a href="http://www.newbidder.com/mini-tutorial.html">www.newbidder.com/mini-tutorial.html</a>
                 </li>
                 <li>重要消息请关注:<a class="fb-btn" href="https://www.facebook.com/newbiddertrk/"><i class="icon-facebook-sign"></i> Facebook 官方</a>
                 </li>
