--- a/www.newbidder.com/newbidder_free_teaser_en.html
+++ b/www.newbidder.com/newbidder_free_teaser_en.html
@@ -66,7 +66,7 @@
         </ul>
         <div class="free-teaser-xq">
             <ul>
-                <li>More manual document in: <a href="www.newbidder.com/mini-tutorial.html">www.newbidder.com/mini-tutorial.html</a>
+                <li>More manual document in: <a href="http://www.newbidder.com/mini-tutorial.html">www.newbidder.com/mini-tutorial.html</a>
                 </li>
                 <li>All announcement in: <a class="fb-btn" href="https://www.facebook.com/newbiddertrk/"><i class="icon-facebook-sign"></i> Facebook fanpage</a>
                 </li>
