add href for Try it Free

--- a/www.newbidder.com/newbidder_free_teaser.html
+++ b/www.newbidder.com/newbidder_free_teaser.html
@@ -26,7 +26,7 @@
     <div class="free-font-top">
         您还在每月支付高昂的追踪费用或者是购买高昂的服务器费用自己去花时间搭建追踪吗！各位affiliates的福利来啦, 为了节省您的金钱和时间成本, Newbidder决定推出免费套餐,而且是真正意义上的免费, 永久免费，没有流量限制，而且在功能上基本覆盖Voluum和IM上的所有功能，我们还推出了Voluum和im没有的功能！您再也不用为高昂的追踪工具付费啦！
     </div>
-    <div class="free-title"><h2>下面是免费套餐的内容:</h2><a class="free-title-btn">免费试用</a></div>
+    <div class="free-title"><h2>下面是免费套餐的内容:</h2><a class="free-title-btn" href="http://panel.newbidder.com/#/access/signin">免费试用</a></div>
     <div class="free-teaser-list">
         <ul class="free-teaser-list-top">
             <li>
