--- a/www.newbidder.com/newbidder_free_teaser_en.html
+++ b/www.newbidder.com/newbidder_free_teaser_en.html
@@ -26,7 +26,7 @@
     <div class="free-font-top">
         Are you still paying off the high cost for the tracker or server? The good news is newbidder tracker decide publish an Free Plan with unlimited events for saving the money and time for affiliates. Yes, it is Free! Free! Free since next month. Newbidder is more than free but more functionality than Voluum and other tracking software.
     </div>
-    <div class="free-title"><h2>The Free plan list below:</h2><a class="free-title-btn">Try it Free</a></div>
+    <div class="free-title"><h2>The Free plan list below:</h2><a class="free-title-btn" href="http://panel.newbidder.com/#/access/signin">Try it Free</a></div>
     <div class="free-teaser-list">
         <ul class="free-teaser-list-top">
             <li>
