traffic source 默认advance展开

--- a/Front/src/tpl/trafficSource-edit-dialog.html
+++ b/Front/src/tpl/trafficSource-edit-dialog.html
@@ -82,7 +82,7 @@
                     <h3 class="label-con">
                         <span></span>
                         Advanced
-                        <i class="icon-chevron-down"></i>
+                        <i class="icon-chevron-down" ng-class="{'arrow-up': visible}"></i>
                     </h3>
                 </div>
             </div>
