--- a/Front/src/tpl/setApp.html
+++ b/Front/src/tpl/setApp.html
@@ -15,12 +15,12 @@
       <div class="setting">
         <a class="setting-link" ui-sref="setApp.profile"><i class="icon-s-03 fonts15"></i></a>
       </div>
-      <div class="coupon-btn" has-permission="setting.subscriptions.show" operation="show">
+      <!--<div class="coupon-btn" has-permission="setting.subscriptions.show" operation="show">
           <a href="javascript:;" ng-click="goCoupon()">
           <div class="coupon-btn-col">
           <span class="small-font">COUPON CODE</span><i class="coupon-icon"></i>
           </div>
-      </a></div>
+      </a></div>-->
 
         <ul class="nav navbar-nav navbar-right">
             <!-- dropdown for user -->
@@ -33,7 +33,7 @@
                 </a>
                 <ul class="dropdown-menu animated fadeInRight w" uib-dropdown-menu>
                     <li class="support-li">
-                        <a href="http://discourse.newbidder.com/c/Frequently-Asked-QuestionAnswer"><b>Help Center</b><i class="icon-question-sign"></i></a>
+                        <a href="http://discourse.newbidder.com/c/Frequently-Asked-QuestionAnswer" target="_blank"><b>Help Center</b><i class="icon-question-sign"></i></a>
                     </li>
                     <li class="support-li">
                         <a clipboard ng-click="copyCon()" text="emailCon"><b>Email</b>：<span ng-model="emailCon">support@newbidder.com</span></a>
